# skeleton

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO  TODO.md  acceptance-test-host.sh  avrdude  build.sh  ci-build.sh  clean.sh  cmake-amd64  cmake-avr  cmake-host  cmake-target  cmake-ybpi  controller-features.sh  device-features.sh  env-amd64.sh  env-avr.sh  env-host.sh  env-target.sh  env-ybpi.sh  hardware.conf  module-features-target.sh  module-features.sh  run-amd64  run-host  run-target  shell-amd64  shell-avr  shell-host  shell-target  shell-ybpi  shell.sh  toolchain.conf
app/: application.cc
conf/: index.html
cucumber-cpp-0.3/: CMakeLists.txt
gmock-1.7.0/: CMakeLists.txt
host-gcc/: Dockerfile
host-gcc-data/: Dockerfile
main/: main.cc
scripts/: avrdude  cmake-amd64  cmake-avr  cmake-ybpi  device-features.sh  env-amd64.sh  env-avr.sh  env-ybpi.sh  module-features-target.sh  module-features.sh  run-amd64  shell-amd64  shell-avr  shell-ybpi
source/: CMakeLists.txt  arm-poky-linux-gnueabi.cmake  cucumber-cpp.cmake  gcc-avr.cmake  googletest.cmake
source/acceptance-test-host/: CMakeLists.txt
source/app/: CMakeLists.txt  application.cc  spi.cc
source/app-test/: CMakeLists.txt  application.cc  spi.cc
source/app/inc/app/: application.h  device.h  spi.h
source/controller/: CMakeLists.txt  spikes.md
source/controller/acceptance-test-host/: CMakeLists.txt
source/controller/application-lib/: CMakeLists.txt  application.cc  controller.cc  doorbell.cc  shell.cc  spi.cc
source/controller/application-lib/include/application/: application.h  controller.h  doorbell.h  icommand.h  iinterrupt.h  shell.h  spi.h
source/controller/application-test/: CMakeLists.txt  application.cc  spi.cc
source/controller/controller-cucumber/: CMakeLists.txt  main.cc
source/controller/controller-exe/: CMakeLists.txt  main.cc
source/controller/features/: CMakeLists.txt  doorbell.feature  dummy.feature
source/controller/features/step_definitions/: controller_context.h  cucumber-cpp.wire  dummy.cc  steps.cc
source/cucumber-cpp-0.3/: CMakeLists.txt
source/cucumber-cpp-0.3/include/cucumber-cpp/internal/connectors/wire/: WireProtocolCommands.hpp
source/cucumber-cpp-0.3/src/connectors/wire/: WireProtocolCommands.cpp
source/device/: CMakeLists.txt  avr.cmake
source/device/device-cucumber/: CMakeLists.txt  main.cc
source/device/device-exe/: CMakeLists.txt  main.c
source/device/device-lib/: CMakeLists.txt  device.c  gpio.c  ipwm.c  itimer.c  pwm.c  system_tick.c  timer.c
source/device/device-lib/include/device/: device.h  gpio.h  io.h  ipwm.h  itimer.h  pwm.h  system_tick.h  timer.h
source/device/device-lib/seams/avr/: interrupt.h  io.h
source/device/device-lib/seams/util/: delay.h
source/device/device-test/: CMakeLists.txt  device.cc  gpio.cc  pretty_print.h  pwm.cc  pwm_interface.cc  pwm_spy.h  seams.cc  seams_interrupt.cc  seams_interrupt.h  system_tick.cc  timer.cc  timer_interface.cc  timer_stub.h
source/device/features/: CMakeLists.txt  doorbell.feature
source/device/features/step_definitions/: cucumber-cpp.wire  device_context.h  dummy.cc  gpio_stub.h  pwm_spy.h  steps.cc
source/device/features/test_doubles/: button_fake.h  gpio_stub.h  pwm_spy.h  seams.cc  seams_interrupt.cc  timer_stub.h
source/device/fw-main/: CMakeLists.txt  main.cc
source/features/: dummy.feature
source/fw-main/: CMakeLists.txt
source/gmock-1.7.0/: CMakeLists.txt
source/main/: CMakeLists.txt  main.cc
source/module/: CMakeLists.txt
source/module/acceptance-test-target/features/: doorbell.feature
source/module/acceptance-test-target/features/step_definitions/: steps.rb
source/module/application-lib/: CMakeLists.txt  application.cc  controller.cc  doorbell.cc  gpio.cc  poll.cc  request.cc  scheduler.cc  shell.cc
source/module/application-lib/include/application/: application.h  controller.h  doorbell.h  gpio.h  icommand.h  iinterrupt.h  ipoll.h  irequest.h  ischeduler.h  poll.h  request.h  scheduler.h
source/module/application-test/: CMakeLists.txt  application.cc  command_mock.h  controller.cc  doorbell.cc  gpio.cc  interrupt_stub.h  poll_stub.h  scheduler.cc  scheduler_mock.h  subscriber_stub.h  wip.cc
source/module/conf/: lighttpd.conf
source/module/driver-test/: CMakeLists.txt  interrupt.cc
source/module/features/: CMakeLists.txt  doorbell.feature
source/module/features/step_definitions/: controller_context.h  steps.cc
source/module/module-exe/: CMakeLists.txt  main.cc
tools/: .gitignore  Makefile
tools/host-gcc/: Dockerfile
tools/host-sdk/: Dockerfile
tools/ybpi-sdk-data/: Dockerfile
